# norn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  lang.norn
doc/: TODO  apple_gcc_optimizations.html  gc.txt
source/: generate.cpp  lexer.cpp  lexer.h  main.cpp  main.h  parser.cpp  parser.h  tree.cpp  tree.h  type.cpp  type.h
source/vm/: block.cpp  block.h  common.cpp  common.h  frame.h  goto.h  instruction.cpp  instruction.h  ir.cpp  ir.h  jit.cpp  machine.cpp  machine.h  memory.cpp  memory.h  opcode.cpp  opcode.def  opcode.h  optimizer.cpp  program.cpp  program.h  trace.cpp  trace.h  variant.h
source/vm/AsmJit/: CMakeLists.txt  Makefile
source/vm/dlmalloc/: Makefile
test/: runner.py
test/array/: access.norn  access.out
test/basic/: assign.norn  bool.norn  cast.norn  cast.out  empty.norn  gc.norn  jit.lua  jit.norn  jit.out  several_expressions.norn  string.norn  string.out  struct.norn  struct.out  two_arguments.norn  two_arguments.out
test/complex/approxpi/: approxpi.lua  approxpi.norn
test/complex/collatz/: collatz.norn  collatz.out
test/complex/eratosthenes/: sieve.norn  sieve.out
test/complex/factorial/: factorial.norn  factorial.py
test/complex/fib/: fib.lua  fib.norn
test/complex/fractal/: fractal.lua  fractal.norn  fractal.out
test/complex/primes/: primes.lua  primes.norn
test/complex/sort/: insertion_sort.norn  insertion_sort.out
test/control/: cond.norn  embedded_loops.norn  embedded_loops.out  for.norn  multiple_functions.norn  multiple_loops.norn  multiple_loops.out  recurse_limit.norn  while.norn
test/error/: missing_function.norn  missing_function.out  unknow_var.norn  unknow_var.out
test/lang/: sqrt.norn  sqrt.out
